added header for homepage

--- a/index.html
+++ b/index.html
@@ -3,11 +3,29 @@
 
 <head>
     <!-- TODO: Include Font Awesome file here -->
+    <link rel="stylesheet" href="path/to/font-awesome/css/font-awesome.min.css">
+    <!-- included bootstrap cdn for buttons-->
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
     <!-- TODO: Include Google Fonts file here -->
+    <link href="https://fonts.googleapis.com/css?family=Montez&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="styles/common.css">
+    
+    <meta name="viewport" content = "width=device-width, initial-scale=1.0" >
 </head>
 
 <body>
     <!-- TODO: Include all your code for the header and home page here -->
+    <header class="header">
+            <div class=logos-container> 
+                    <p class="logos" id="title">ScriBBler</p>
+                    <p class="logos" id="subheading">Explore, Imagine, Create</p>
+            </div>
+            <div class='buttons-container'>
+                    <button type="button" class="btn btn-primary">Sign Up</button>
+                    <button type="button" class="btn btn-primary">Sign In</button>        
+            </div>
+    </header>
+    
 </body>
 
 </html>
