--- a/index.html
+++ b/index.html
@@ -33,29 +33,31 @@
             <div id="signupModal" class="modal">
               <!-- Singup Modal content -->
               <div class="modal-content">
-                <span>
-                  <label class="ModalHeader">Get Started</label>
+                <div class="modal-header">
+                  <h2 class="modal-title" id="signupModalCenterTitle">Get Started</h2>
                   <i class="fas fa-times"></i>
-                </span>
-                <form>
-                  <div>
-                    <p>Some text in the Modal..</p>
-                  </div>
-                </form>
+                </div>
+                <div class="modal-body">
+                  ...
+                </div>
+                <div class="modal-footer">
+                  <button type="button" class="btn btn-primary">Sign Up</button>
+                </div>
                 </div>
             </div>
             <div id="signinModal" class="modal">
               <!-- Singin Modal content -->
               <div class="modal-content">
-                  <span>
-                    <label class="ModalHeader">Welcome Back!</label>
-                    <i class="fas fa-times"></i>
-                  </span>
-                <form>
-                  <div>
-                    <p>Some text in the Modal..</p>
-                  </div>
-                </form>
+                <div class="modal-header">
+                  <h2 class="modal-title" id="signinModalCenterTitle">Welcome Back!</h2>
+                  <i class="fas fa-times"></i>
+                </div>
+                <div class="modal-body">
+                  ...
+                </div>
+                <div class="modal-footer">
+                  <button type="button" class="btn btn-primary">Sign In</button>
+                </div>
               </div>
             </div>
       <script type="text/javascript" src="scripts/index.js"></script>
