Added posts buttons to the center of homepage

--- a/index.html
+++ b/index.html
@@ -62,5 +62,10 @@
             </div>
       <script type="text/javascript" src="scripts/index.js"></script>
     </header>
+
+    <div class="postbuttons">
+      <button type="button"  id="allposts">All Posts</button>
+      <button type="button"  id="createposts">Create Posts</button>
+    </div>
 </body>
 </html>
