background image round and post buttons in table

--- a/index.html
+++ b/index.html
@@ -64,8 +64,16 @@
     </header>
 
     <div class="postbuttons">
-      <button type="button"  id="allposts">All Posts</button>
-      <button type="button"  id="createposts">Create Posts</button>
-    </div>
+      <table class=buttons>
+        <tr>
+          <td>
+            <button type="button"  id="allposts">All Posts</button>
+          </td>
+          <td>
+            <button type="button"  id="createposts">Create Post</button>
+          </td>
+        </tr>
+      </table>
+   </div>
 </body>
 </html>
