--- a/index.html
+++ b/index.html
@@ -38,10 +38,18 @@
                   <i class="fas fa-times"></i>
                 </div>
                 <div class="modal-body">
-                  ...
-                </div>
-                <div class="modal-footer">
-                  <button type="button" class="btn btn-primary">Sign Up</button>
+                  <form>
+                    <h4>Name</h4>
+                    <input class="inp" type="text" name="fname" placeholder="Enter your name" required>
+                    <h4>Username</h4>
+                    <input class="inp" type="text" name="fname" placeholder="Enter your username" required>
+                    <h4>Password</h4>
+                    <input class="inp" type="password" name="pass" placeholder="Enter your password" required>
+                    <h4>Confirm Password</h4>
+                    <input class="inp" type="password" name="confPass" placeholder="Re-enter your password" required>
+                    <hr/>
+                    <button>Sign Up</button>
+                  </form>
                 </div>
                 </div>
             </div>
@@ -53,10 +61,18 @@
                   <i class="fas fa-times"></i>
                 </div>
                 <div class="modal-body">
-                  ...
-                </div>
-                <div class="modal-footer">
-                  <button type="button" class="btn btn-primary">Sign In</button>
+                  <form>
+                    <h4>Username</h4>
+                    <input class="inp" type="text" name="fname" placeholder="Enter your username" required>
+                    <h4>Password</h4>
+                    <input class="inp" type="password" name="pass" placeholder="Enter your password" required>
+                    <hr/>
+                    <button>Sign In</button>
+                    <div>
+                        <h4>Not a member?<span style="color:slateblue; cursor: pointer;" onclick="newUser()">Sign
+                                Up</span></h4>
+                    </div>
+                  </form>
                 </div>
               </div>
             </div>
