added functioncalls for signin and signup to do non-blank validations

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                     <label class="labels">Confirm Password</label>
                     <input class="inp" type="password" name="confPass" placeholder="Re-enter your password" required>
                     <hr/>
-                    <button type="button" class="submitSignupins" id="submitSignup">Sign Up</button>
+                    <button type="button" class="submitSignupins" id="submitSignup" onclick="callSignup()">Sign Up</button>
                   </form>
                 </div>
                 </div>
@@ -67,7 +67,7 @@
                     <label class="labels">Password</label>
                     <input class="inp" type="password" name="pass" placeholder="Enter your password" required>
                     <hr/>
-                    <button type="button" class="submitSignupins" id="submitSignin">Sign In</button>
+                    <button type="button" class="submitSignupins" id="submitSignin" onclick="callSignin()">Sign In</button>
                     <div>
                         <h4 id="redirect2signup">Not a member?<span style="color:slateblue; cursor: pointer;" onclick="newUser()">Sign
                                 Up</span></h4>
