--- a/index.html
+++ b/index.html
@@ -102,9 +102,9 @@
               <label class="labels">Title</label>
               <input class="inp" type="text" name="titlename" placeholder="Enter title of your post" required>
               <label class="labels">Contents</label>
-              <input class="inp" type="text" name="contentstext" placeholder="Enter the comments of your post" required>
+              <textarea rows="5" cols="60" class="inp" type="text" name="contentstext" placeholder="Enter the contents of your post" required></textarea>
               <hr/>
-              <button type="button" class="postcreatebuttons" id="createpostbtn" onclick="createPost()">Create</button>
+              <button type="button" class="submitSignupins" id="createpostbtn" onclick="createPost()">Create</button>
             </form>
           </div>
         </div>
