PartB postslist header added

--- a/html/postslist.html
+++ b/html/postslist.html
@@ -3,128 +3,195 @@
 
 <head>
     <!-- TODO: Include Font Awesome file here -->
+    <link rel="stylesheet" href="../styles/fontawesome/css/all.css">
+    <!-- included bootstrap cdn for buttons-->
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
     <!-- TODO: Include Google Fonts file here -->
+    <link href="https://fonts.googleapis.com/css?family=Montez&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="../styles/postslist.css">
+
+    <meta name="viewport" content = "width=device-width, initial-scale=1.0" >
+
+    <title>View Scribbler posts!</title>
 </head>
 
 <body>
-    <!-- TODO: Include code for header here -->
-
-    <!-- ATTENTION: The HTML code for the list of posts has been given to you. You can feel free to add/delete/modify this code. You need to write the proper CSS and JavaScript code corresponding to this page so that the result looks like the screenshots given to you in the Project Statement. -->
-
-    <!-- list of all posts starts here -->
-    <div>
-
-        <!-- post 1 starts here -->
-        <div>
-            <div>
-                <p>Srishti Gupta</p>
-            </div>
-
-            <div>
-                <div>
-                    <p>‘let’ me be a ‘const’(ant), not a ‘var’(iable)!</p>
-                    <span>
-                        <!-- TODO: Include Font Awesome icon for delete icon here -->
-                    </span>
-                </div>
-                <p>Since JavaScript does not have any type-checking, either of these keywords can be used to declare a variable of any type (datatype) in JavaScript. Though all the three keywords are used for the same purpose, they are different.</p>
-                <span>
-                    <!-- TODO: Include Font Awesome icon for horizontal ellipsis icon here -->
-                </span>
-            </div>
-        </div>
-        <!-- post 1 ends here -->
-
-        <!-- post 2 starts here -->
-        <div>
-            <div>
-                <p>Colby Fayock</p>
-            </div>
-
-            <div>
-                <div>
-                    <p>What is linting and how can it save you time?</p>
-                    <span>
-                        <!-- TODO: Include Font Awesome icon for delete icon here -->
-                    </span>
-                </div>
-                <p>One of the biggest challenges in software development is time. It’s something we can’t easily get more of, but linting can help us make the most out of the time we have.</p>
-                <span>
-                    <!-- TODO: Include Font Awesome icon for horizontal ellipsis icon here -->
-                </span>
-            </div>
-        </div>
-        <!-- post 2 ends here -->
-
-        <!-- post 3 starts here -->
-        <div>
-            <div>
-                <p>Yazeed Bzadough</p>
-            </div>
-
-            <div>
-                <div>
-                    <p>How to Get More Views on Your Tech Blog</p>
-                    <span>
-                        <!-- TODO: Include Font Awesome icon for delete icon here -->
-                    </span>
-                </div>
-                <p>If you're a developer with a Twitter account, you've already seen everyone and their cat start a blog, YouTube channel, or Patreon. We all want to become stars, or at the very least, a recognizable name in the industry.</p>
-                <span>
-                    <!-- TODO: Include Font Awesome icon for horizontal ellipsis icon here -->
-                </span>
-            </div>
-        </div>
-        <!-- post 3 ends here -->
-
-        <!-- post 4 starts here -->
-        <div>
-            <div>
-                <p>Cedd Burge</p>
-            </div>
-
-            <div>
-                <div>
-                    <p>How to write easily describable code</p>
-                    <span>
-                        <!-- TODO: Include Font Awesome icon for delete icon here -->
-                    </span>
-                </div>
-                <p>When code is not describable using words, most people have to do some mental mapping to turn it in to words. This wastes mental energy, and you run the risk of getting the mapping wrong. Different people will map to different words, which
-                    leads to confusion when discussing the code.</p>
-                <span>
-                    <!-- TODO: Include Font Awesome icon for horizontal ellipsis icon here -->
-                </span>
-            </div>
-        </div>
-        <!-- post 4 ends here -->
-
-        <!-- post 5 starts here -->
-        <div>
-            <div>
-                <p>Srishti Gupta</p>
-            </div>
-
-            <div>
-                <div>
-                    <p>Everything you should know about ‘module’ & ‘require’ in Node.js</p>
-                    <span>
-                        <!-- TODO: Include Font Awesome icon for delete icon here -->
-                    </span>
-                </div>
-                <p>Node.js treats each JavaScript file as a separate module. For instance, if you have a file containing some code and this file is named xyz.js, then this file is treated as a module in Node, and you can say that you’ve created a module
-                    named xyz.</p>
-                <span>
-                    <!-- TODO: Include Font Awesome icon for horizontal ellipsis icon here -->
-                </span>
-            </div>
-        </div>
-        <!-- post 5 ends here -->
-
-        <!-- TODO: Write code for delete post modal here -->
-
+<!-- TODO: Include all your code for the header and home page here -->
+<header class="header">
+    <div class=logos-container>
+        <p class="logos" id="title">ScriBBler</p>
+        <p class="logos" id="subheading">Explore, Imagine, Create</p>
     </div>
-    <!-- list of all posts ends here -->
+    <div class='buttons-container'>
+        <button type="button" class="btn btn-primary" id="signup" >Sign Up</button>
+        <button type="button" class="btn btn-primary" id="signin">Sign In</button>
+    </div>
+    <div id="signupModal" class="modal">
+        <!-- Singup Modal content -->
+        <div class="modal-content">
+            <div class="modal-header">
+                <h2 class="modal-title" id="signupModalCenterTitle">Get Started</h2>
+                <i class="fas fa-times"></i>
+            </div>
+            <div class="modal-body">
+                <form class="signforms">
+                    <label class="labels">Name</label>
+                    <input class="inp" type="text" name="fname" placeholder="Enter your name" required>
+                    <label class="labels">Username</label>
+                    <input class="inp" type="text" name="fname" placeholder="Enter your username" required>
+                    <label class="labels">Password</label>
+                    <input class="inp" type="password" name="pass" placeholder="Enter your password" required>
+                    <label class="labels">Confirm Password</label>
+                    <input class="inp" type="password" name="confPass" placeholder="Re-enter your password" required>
+                    <hr/>
+                    <button type="button" class="submitSignupins" id="submitSignup" onclick="callSignup()">Sign Up</button>
+                </form>
+            </div>
+        </div>
+    </div>
+    <div id="signinModal" class="modal">
+        <!-- Singin Modal content -->
+        <div class="modal-content">
+            <div class="modal-header">
+                <h2 class="modal-title" id="signinModalCenterTitle">Welcome Back!</h2>
+                <i class="fas fa-times"></i>
+            </div>
+            <div class="modal-body">
+                <form class="signforms">
+                    <label class="labels">Username</label>
+                    <input class="inp" type="text" name="fname" placeholder="Enter your username" required>
+                    <label class="labels">Password</label>
+                    <input class="inp" type="password" name="pass" placeholder="Enter your password" required>
+                    <hr/>
+                    <button type="button" class="submitSignupins" id="submitSignin" onclick="callSignin()">Sign In</button>
+                    <div>
+                        <h4 id="redirect2signup">Not a member?<span style="color:slateblue; cursor: pointer;" onclick="newUser()">Sign
+                                Up</span></h4>
+                    </div>
+                </form>
+            </div>
+        </div>
+    </div>
+</header>
+
+<!--    &lt;!&ndash; ATTENTION: The HTML code for the list of posts has been given to you. You can feel free to add/delete/modify this code. You need to write the proper CSS and JavaScript code corresponding to this page so that the result looks like the screenshots given to you in the Project Statement. &ndash;&gt;-->
+
+<!--    &lt;!&ndash; list of all posts starts here &ndash;&gt;-->
+<!--    <div>-->
+
+<!--        &lt;!&ndash; post 1 starts here &ndash;&gt;-->
+<!--        <div>-->
+<!--            <div>-->
+<!--                <p>Srishti Gupta</p>-->
+<!--            </div>-->
+
+<!--            <div>-->
+<!--                <div>-->
+<!--                    <p>‘let’ me be a ‘const’(ant), not a ‘var’(iable)!</p>-->
+<!--                    <span>-->
+<!--                        &lt;!&ndash; TODO: Include Font Awesome icon for delete icon here &ndash;&gt;-->
+<!--                    </span>-->
+<!--                </div>-->
+<!--                <p>Since JavaScript does not have any type-checking, either of these keywords can be used to declare a variable of any type (datatype) in JavaScript. Though all the three keywords are used for the same purpose, they are different.</p>-->
+<!--                <span>-->
+<!--                    &lt;!&ndash; TODO: Include Font Awesome icon for horizontal ellipsis icon here &ndash;&gt;-->
+<!--                </span>-->
+<!--            </div>-->
+<!--        </div>-->
+<!--        &lt;!&ndash; post 1 ends here &ndash;&gt;-->
+
+<!--        &lt;!&ndash; post 2 starts here &ndash;&gt;-->
+<!--        <div>-->
+<!--            <div>-->
+<!--                <p>Colby Fayock</p>-->
+<!--            </div>-->
+
+<!--            <div>-->
+<!--                <div>-->
+<!--                    <p>What is linting and how can it save you time?</p>-->
+<!--                    <span>-->
+<!--                        &lt;!&ndash; TODO: Include Font Awesome icon for delete icon here &ndash;&gt;-->
+<!--                    </span>-->
+<!--                </div>-->
+<!--                <p>One of the biggest challenges in software development is time. It’s something we can’t easily get more of, but linting can help us make the most out of the time we have.</p>-->
+<!--                <span>-->
+<!--                    &lt;!&ndash; TODO: Include Font Awesome icon for horizontal ellipsis icon here &ndash;&gt;-->
+<!--                </span>-->
+<!--            </div>-->
+<!--        </div>-->
+<!--        &lt;!&ndash; post 2 ends here &ndash;&gt;-->
+
+<!--        &lt;!&ndash; post 3 starts here &ndash;&gt;-->
+<!--        <div>-->
+<!--            <div>-->
+<!--                <p>Yazeed Bzadough</p>-->
+<!--            </div>-->
+
+<!--            <div>-->
+<!--                <div>-->
+<!--                    <p>How to Get More Views on Your Tech Blog</p>-->
+<!--                    <span>-->
+<!--                        &lt;!&ndash; TODO: Include Font Awesome icon for delete icon here &ndash;&gt;-->
+<!--                    </span>-->
+<!--                </div>-->
+<!--                <p>If you're a developer with a Twitter account, you've already seen everyone and their cat start a blog, YouTube channel, or Patreon. We all want to become stars, or at the very least, a recognizable name in the industry.</p>-->
+<!--                <span>-->
+<!--                    &lt;!&ndash; TODO: Include Font Awesome icon for horizontal ellipsis icon here &ndash;&gt;-->
+<!--                </span>-->
+<!--            </div>-->
+<!--        </div>-->
+<!--        &lt;!&ndash; post 3 ends here &ndash;&gt;-->
+
+<!--        &lt;!&ndash; post 4 starts here &ndash;&gt;-->
+<!--        <div>-->
+<!--            <div>-->
+<!--                <p>Cedd Burge</p>-->
+<!--            </div>-->
+
+<!--            <div>-->
+<!--                <div>-->
+<!--                    <p>How to write easily describable code</p>-->
+<!--                    <span>-->
+<!--                        &lt;!&ndash; TODO: Include Font Awesome icon for delete icon here &ndash;&gt;-->
+<!--                    </span>-->
+<!--                </div>-->
+<!--                <p>When code is not describable using words, most people have to do some mental mapping to turn it in to words. This wastes mental energy, and you run the risk of getting the mapping wrong. Different people will map to different words, which-->
+<!--                    leads to confusion when discussing the code.</p>-->
+<!--                <span>-->
+<!--                    &lt;!&ndash; TODO: Include Font Awesome icon for horizontal ellipsis icon here &ndash;&gt;-->
+<!--                </span>-->
+<!--            </div>-->
+<!--        </div>-->
+<!--        &lt;!&ndash; post 4 ends here &ndash;&gt;-->
+
+<!--        &lt;!&ndash; post 5 starts here &ndash;&gt;-->
+<!--        <div>-->
+<!--            <div>-->
+<!--                <p>Srishti Gupta</p>-->
+<!--            </div>-->
+
+<!--            <div>-->
+<!--                <div>-->
+<!--                    <p>Everything you should know about ‘module’ & ‘require’ in Node.js</p>-->
+<!--                    <span>-->
+<!--                        &lt;!&ndash; TODO: Include Font Awesome icon for delete icon here &ndash;&gt;-->
+<!--                    </span>-->
+<!--                </div>-->
+<!--                <p>Node.js treats each JavaScript file as a separate module. For instance, if you have a file containing some code and this file is named xyz.js, then this file is treated as a module in Node, and you can say that you’ve created a module-->
+<!--                    named xyz.</p>-->
+<!--                <span>-->
+<!--                    &lt;!&ndash; TODO: Include Font Awesome icon for horizontal ellipsis icon here &ndash;&gt;-->
+<!--                </span>-->
+<!--            </div>-->
+<!--        </div>-->
+<!--        &lt;!&ndash; post 5 ends here &ndash;&gt;-->
+
+<!--        &lt;!&ndash; TODO: Write code for delete post modal here &ndash;&gt;-->
+
+<!--    </div>-->
+<!--    &lt;!&ndash; list of all posts ends here &ndash;&gt;-->
+<script type="text/javascript" src="../scripts/postslist.js"></script>
+
 </body>
 
 </html>
