PartB template for postslist added

--- a/html/postslist.html
+++ b/html/postslist.html
@@ -72,124 +72,18 @@
             </div>
         </div>
     </div>
-</header>
+  </header>
 
-<!--    &lt;!&ndash; ATTENTION: The HTML code for the list of posts has been given to you. You can feel free to add/delete/modify this code. You need to write the proper CSS and JavaScript code corresponding to this page so that the result looks like the screenshots given to you in the Project Statement. &ndash;&gt;-->
+    <!-- ATTENTION: The HTML code for the list of posts has been given to you. You can feel free to add/delete/modify this code.
+    You need to write the proper CSS and JavaScript code corresponding to this page so that the result looks like the screenshots given to you in the Project Statement. -->
 
-<!--    &lt;!&ndash; list of all posts starts here &ndash;&gt;-->
-<!--    <div>-->
+    <!-- list of all posts starts here -->
+    <div id="postslistdiv">
 
-<!--        &lt;!&ndash; post 1 starts here &ndash;&gt;-->
-<!--        <div>-->
-<!--            <div>-->
-<!--                <p>Srishti Gupta</p>-->
-<!--            </div>-->
+        <!-- TODO: Write code for delete post modal here -->
 
-<!--            <div>-->
-<!--                <div>-->
-<!--                    <p>‘let’ me be a ‘const’(ant), not a ‘var’(iable)!</p>-->
-<!--                    <span>-->
-<!--                        &lt;!&ndash; TODO: Include Font Awesome icon for delete icon here &ndash;&gt;-->
-<!--                    </span>-->
-<!--                </div>-->
-<!--                <p>Since JavaScript does not have any type-checking, either of these keywords can be used to declare a variable of any type (datatype) in JavaScript. Though all the three keywords are used for the same purpose, they are different.</p>-->
-<!--                <span>-->
-<!--                    &lt;!&ndash; TODO: Include Font Awesome icon for horizontal ellipsis icon here &ndash;&gt;-->
-<!--                </span>-->
-<!--            </div>-->
-<!--        </div>-->
-<!--        &lt;!&ndash; post 1 ends here &ndash;&gt;-->
-
-<!--        &lt;!&ndash; post 2 starts here &ndash;&gt;-->
-<!--        <div>-->
-<!--            <div>-->
-<!--                <p>Colby Fayock</p>-->
-<!--            </div>-->
-
-<!--            <div>-->
-<!--                <div>-->
-<!--                    <p>What is linting and how can it save you time?</p>-->
-<!--                    <span>-->
-<!--                        &lt;!&ndash; TODO: Include Font Awesome icon for delete icon here &ndash;&gt;-->
-<!--                    </span>-->
-<!--                </div>-->
-<!--                <p>One of the biggest challenges in software development is time. It’s something we can’t easily get more of, but linting can help us make the most out of the time we have.</p>-->
-<!--                <span>-->
-<!--                    &lt;!&ndash; TODO: Include Font Awesome icon for horizontal ellipsis icon here &ndash;&gt;-->
-<!--                </span>-->
-<!--            </div>-->
-<!--        </div>-->
-<!--        &lt;!&ndash; post 2 ends here &ndash;&gt;-->
-
-<!--        &lt;!&ndash; post 3 starts here &ndash;&gt;-->
-<!--        <div>-->
-<!--            <div>-->
-<!--                <p>Yazeed Bzadough</p>-->
-<!--            </div>-->
-
-<!--            <div>-->
-<!--                <div>-->
-<!--                    <p>How to Get More Views on Your Tech Blog</p>-->
-<!--                    <span>-->
-<!--                        &lt;!&ndash; TODO: Include Font Awesome icon for delete icon here &ndash;&gt;-->
-<!--                    </span>-->
-<!--                </div>-->
-<!--                <p>If you're a developer with a Twitter account, you've already seen everyone and their cat start a blog, YouTube channel, or Patreon. We all want to become stars, or at the very least, a recognizable name in the industry.</p>-->
-<!--                <span>-->
-<!--                    &lt;!&ndash; TODO: Include Font Awesome icon for horizontal ellipsis icon here &ndash;&gt;-->
-<!--                </span>-->
-<!--            </div>-->
-<!--        </div>-->
-<!--        &lt;!&ndash; post 3 ends here &ndash;&gt;-->
-
-<!--        &lt;!&ndash; post 4 starts here &ndash;&gt;-->
-<!--        <div>-->
-<!--            <div>-->
-<!--                <p>Cedd Burge</p>-->
-<!--            </div>-->
-
-<!--            <div>-->
-<!--                <div>-->
-<!--                    <p>How to write easily describable code</p>-->
-<!--                    <span>-->
-<!--                        &lt;!&ndash; TODO: Include Font Awesome icon for delete icon here &ndash;&gt;-->
-<!--                    </span>-->
-<!--                </div>-->
-<!--                <p>When code is not describable using words, most people have to do some mental mapping to turn it in to words. This wastes mental energy, and you run the risk of getting the mapping wrong. Different people will map to different words, which-->
-<!--                    leads to confusion when discussing the code.</p>-->
-<!--                <span>-->
-<!--                    &lt;!&ndash; TODO: Include Font Awesome icon for horizontal ellipsis icon here &ndash;&gt;-->
-<!--                </span>-->
-<!--            </div>-->
-<!--        </div>-->
-<!--        &lt;!&ndash; post 4 ends here &ndash;&gt;-->
-
-<!--        &lt;!&ndash; post 5 starts here &ndash;&gt;-->
-<!--        <div>-->
-<!--            <div>-->
-<!--                <p>Srishti Gupta</p>-->
-<!--            </div>-->
-
-<!--            <div>-->
-<!--                <div>-->
-<!--                    <p>Everything you should know about ‘module’ & ‘require’ in Node.js</p>-->
-<!--                    <span>-->
-<!--                        &lt;!&ndash; TODO: Include Font Awesome icon for delete icon here &ndash;&gt;-->
-<!--                    </span>-->
-<!--                </div>-->
-<!--                <p>Node.js treats each JavaScript file as a separate module. For instance, if you have a file containing some code and this file is named xyz.js, then this file is treated as a module in Node, and you can say that you’ve created a module-->
-<!--                    named xyz.</p>-->
-<!--                <span>-->
-<!--                    &lt;!&ndash; TODO: Include Font Awesome icon for horizontal ellipsis icon here &ndash;&gt;-->
-<!--                </span>-->
-<!--            </div>-->
-<!--        </div>-->
-<!--        &lt;!&ndash; post 5 ends here &ndash;&gt;-->
-
-<!--        &lt;!&ndash; TODO: Write code for delete post modal here &ndash;&gt;-->
-
-<!--    </div>-->
-<!--    &lt;!&ndash; list of all posts ends here &ndash;&gt;-->
+    </div>
+    <!-- list of all posts ends here -->
 <script type="text/javascript" src="../scripts/postslist.js"></script>
 
 </body>
